force-app/main/default/objects/blng__BalanceSnapShotRun__c/blng__BalanceSnapShotRun__c.object-meta.xml
<CustomObject>
    <label>Balance Snapshot Run</label>
    <nameField>
        <label>Balance Snapshot Run Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Balance Snapshot Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>