force-app/main/default/objects/blng__BalanceSnapShotRun__c/fields/blng__ApexJobId__c.field-meta.xml
<CustomField>
    <fullName>blng__ApexJobId__c</fullName>
    <label>Apex Job Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>