force-app/main/default/objects/blng__BalanceSnapShotRun__c/fields/blng__BalanceSnapshotScheduler__c.field-meta.xml
<CustomField>
    <fullName>blng__BalanceSnapshotScheduler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Balance Snapshot Scheduler</label>
    <referenceTo>blng__BalanceSnapShotScheduler__c</referenceTo>
    <relationshipLabel>Balance SnapShot Runs</relationshipLabel>
    <relationshipName>BalanceSnapshotRuns</relationshipName>
    <type>Lookup</type>
</CustomField>